[gd_scene load_steps=3 format=3 uid="uid://co6esgob5deij"]

[ext_resource type="Script" path="res://CREATEUSER.gd" id="1_notm8"]
[ext_resource type="Texture2D" uid="uid://cpw8mubcrkws4" path="res://SI_GBA_TheLegendOfZeldaTheMinishCap_image1600w.jpg" id="1_u7ic6"]

[node name="CreateUser" type="Control" groups=["crearUsuario"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_notm8")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 643.0
texture = ExtResource("1_u7ic6")

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 296.0
offset_top = 342.0
offset_right = 946.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="TextEdit2" type="TextEdit" parent="."]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
offset_left = 296.0
offset_top = 342.0
offset_right = 946.0
offset_bottom = 402.0
theme_override_font_sizes/font_size = 17
placeholder_text = "CREATE USERNAME"

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
offset_left = 301.0
offset_top = 406.0
offset_right = 951.0
offset_bottom = 466.0
theme_override_font_sizes/font_size = 17
placeholder_text = "CREATE PASSWORD"

[node name="Button_Create" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
offset_left = 304.0
offset_top = 492.0
offset_right = 954.0
offset_bottom = 551.0
theme_override_font_sizes/font_size = 37
text = "CREATE"

[node name="Window" type="Window" parent="."]
position = Vector2i(450, 162)
size = Vector2i(300, 250)

[node name="RichTextLabel" type="RichTextLabel" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Error"

[node name="Button" type="Button" parent="Window"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -31.0
offset_right = 30.0
grow_horizontal = 2
grow_vertical = 0
text = "Accept"

[connection signal="pressed" from="Button_Create" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Window/Button" to="." method="_on_button_pressed"]
